--- a/step-4.html
+++ b/step-4.html
@@ -61,7 +61,7 @@
           <div class="col-md-4 step-form-sidebar">
             <div class="step-list-sidebar">
 
-              <div class="step-list active">
+              <div class="step-list completed">
                 <span class="step-mark">
                   <img src="assets/images/tick.png" alt="complete">
                 </span>
@@ -72,7 +72,7 @@
                 </div>
               </div>
 
-              <div class="step-list">
+              <div class="step-list completed">
                 <span class="step-mark">
                   <img src="assets/images/tick.png" alt="complete">
                 </span>
@@ -83,7 +83,7 @@
                 </div>
               </div>
 
-              <div class="step-list">
+              <div class="step-list completed">
                 <span class="step-mark">
                   <img src="assets/images/tick.png" alt="complete">
                 </span>
@@ -94,7 +94,7 @@
                 </div>
               </div>
 
-              <div class="step-list">
+              <div class="step-list active">
                 <span class="step-mark">
                   <img src="assets/images/tick.png" alt="complete">
                 </span>
@@ -121,13 +121,13 @@
             <div class="step-details">
 
               <!-- step 1  -->
-              <div class="step-box active">
+              <div class="step-box">
                 <div class="step-box-wrapper">
                   <div class="step-box-head">
                     <h3 class="font-600 pb-4">Join as a member</h3>
                   </div>
 
-                  <div class="step-box-body d-none">
+                  <div class="step-box-body">
                     <div class="form-group w-75 mb-3">
                       <label for="email" class="">Email</label>
                       <input type="email" class="form-control" id="email" name="Email">
@@ -138,17 +138,9 @@
                       <input type="text" class="form-control" id="phone-number" name="PhoneNumber">
                     </div>
                   </div>
-
-                  <!-- INLINE LOADER -->
-                  <div class="loader-inline">
-                    <div class="loader-inner">
-                      <div>
-                        <div class="loader-spinner"></div>
-                        <p class="">Loading...</p>
-                      </div>
-                    </div>
-                  </div>
                 </div>
+
+
               </div>
 
               <!-- step 2  -->
@@ -290,13 +282,13 @@
               </div>
 
               <!-- step 3  -->
-              <div class="step-box">
+              <div class="step-box active">
                 <div class="step-box-wrapper">
                   <div class="step-box-head">
                     <h3 class="font-600 pb-4">Membership</h3>
                   </div>
 
-                  <div class="step-box-body">
+                  <div class="step-box-body d-none">
                     <!-- hiding checkbox -->
                     <div class="col-md-12">
                       <div class="form-group">
@@ -331,6 +323,16 @@
                           </div>
                         </div>
 
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- INLINE LOADER -->
+                  <div class="loader-inline">
+                    <div class="loader-inner">
+                      <div>
+                        <div class="loader-spinner"></div>
+                        <p class="">Loading...</p>
                       </div>
                     </div>
                   </div>
@@ -401,8 +403,8 @@
 
               <div class="step-box-foot mt-4">
                 <div class="button-group">
-<!--                  <button type="button" class="btn btn-dark btn-lg btn-long me-3"><img src="assets/images/back.png" alt="prev"><span>Prev</span> </button>-->
-                  <a href="step-2.html" class="btn btn-primary btn-lg btn-long"><span>Next</span> <img src="assets/images/next.png" alt="next"> </a>
+                  <a href="step-3.html" class="btn btn-dark btn-lg btn-long me-3"><img src="assets/images/back.png" alt="prev"><span>Prev</span> </a>
+                  <a href="step-5.html" class="btn btn-primary btn-lg btn-long"><span>Next</span> <img src="assets/images/next.png" alt="next"> </a>
                 </div>
               </div>
 
