thank you page updated!

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="container">
-      <div class="step-form-wrapper w-75 my-5 m-auto">
+      <div class="step-form-wrapper w-md-75 my-5 m-auto">
 
         <div class="row">
 
