--- a/step-thank.html
+++ b/step-thank.html
@@ -55,10 +55,10 @@
     <div class="container">
       <div class="step-form-wrapper w-75 my-5 m-auto">
 
-        <div class="row">
+        <div class="row justify-content-center">
 
           <!-- sidebar -->
-          <div class="col-md-4 step-form-sidebar">
+          <div class="col-md-4 step-form-sidebar d-none">
             <div class="step-list-sidebar">
 
               <div class="step-list completed">
@@ -119,7 +119,7 @@
           </div>
 
           <!-- content -->
-          <div class="col-md-8">
+          <div class="col-md-10">
             <div class="step-details">
 
               <!-- step 1  -->
@@ -412,7 +412,7 @@
 
                   <div class="step-box-body d-none">
                     <div class="text-center">
-                      <img src="assets/images/check-mark.png" alt="Application Completed" class="img-fluid w-25">
+                      <img src="assets/images/check-mark.png" alt="Application Completed" class="img-fluid" style="max-width: 120px">
                       <h2 class="text-success text-uppercase text-thank">Thank You</h2>
                     </div>
 
