new style and form validation has been added

--- a/membership-form.html
+++ b/membership-form.html
@@ -59,168 +59,9 @@
           </div>
         </div>
       </div>
-
-      <!-- text contents -->
-      <div class="container membership-details pt-5">
-        <div class="row">
-          <!-- membership benefits -->
-          <div class="col-md-6">
-            <div class="card card-accordion active">
-              <div class="card-header d-flex justify-content-between">
-                <h5 class="font-600 mb-0">Membership Benefits</h5>
-                <span class="card-accordion-icon">
-                  <img src="assets/images/plus-circle.png" alt="expand" class="plus">
-                  <img src="assets/images/minus-circle.png" alt="expand" class="minus">
-                </span>
-
-              </div>
-              <div class="card-body">
-                <h5 class="card-title font-600">Membership has many benefits, including:</h5>
-
-                <div class="icon-list-group pt-3">
-                  <p class="icon-list"> <img src="assets/images/check-circle.png"> Islamic Weekend School tuition at a discounted rate.</p>
-                  <p class="icon-list"> <img src="assets/images/check-circle.png"> Rental of the Mirror Hall at a discounted rate.</p>
-                  <p class="icon-list"> <img src="assets/images/check-circle.png"> Rental of the Gym Hall or multipurpose recreational building at a discounted rate. </p>
-                  <p class="icon-list"> <img src="assets/images/check-circle.png"> Priority registration in sports activities. </p>
-                  <p class="icon-list"> <img src="assets/images/check-circle.png"> Priority purchase of Eid parking passes. </p>
-                  <p class="icon-list"> <img src="assets/images/check-circle.png"> Periodic mailing of newsletters and event flyers. </p>
-                  <p class="icon-list"> <img src="assets/images/check-circle.png"> General Body meeting. </p>
-                  <p class="icon-list"> <img src="assets/images/check-circle.png"> Voting rights to elect Executive Committee members. </p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- membership rules -->
-          <div class="col-md-6">
-            <div class="card card-accordion active">
-              <div class="card-header d-flex justify-content-between">
-                <h5 class="font-600 mb-0">Membership Rules</h5>
-
-                <span class="card-accordion-icon">
-                  <img src="assets/images/plus-circle.png" alt="expand" class="plus">
-                  <img src="assets/images/minus-circle.png" alt="expand" class="minus">
-                </span>
-              </div>
-              <div class="card-body">
-                <h5 class="card-title font-600">Following are the membership rules:</h5>
-
-                <div class="icon-list-group pt-3">
-                  <p class="icon-list"> <img src="assets/images/check-circle.png"> Any Muslim, 18 years or older, can become a member by applying for membership and paying annual dues. </p>
-                  <p class="icon-list"> <img src="assets/images/check-circle.png"> This membership is valid for one year from the date of application approval. Membership must be renewed every year. </p>
-                  <p class="icon-list"> <img src="assets/images/check-circle.png"> Membership dues must be paid in advance for a year’s membership or be on automatic  payment plan. </p>
-                  <p class="icon-list"> <img src="assets/images/check-circle.png"> Voting rights are available to all members who have completed their paid membership for one year. Members elect part of the Center’s executive board. </p>
-                  <p class="icon-list"> <img src="assets/images/check-circle.png"> Membership is open only to legal residents of USA (only permanent residents and US Citizens can vote). </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <!-- membership fees -->
-          <div class="col-md-6">
-            <div class="card card-accordion active">
-              <div class="card-header d-flex justify-content-between">
-                <h5 class="font-600 mb-0">Membership Fees</h5>
-
-                <span class="card-accordion-icon">
-                  <img src="assets/images/plus-circle.png" alt="expand" class="plus">
-                  <img src="assets/images/minus-circle.png" alt="expand" class="minus">
-                </span>
-              </div>
-              <div class="card-body">
-                <div class="icon-list-group pt-3">
-
-                  <p class="icon-list">
-                    <img src="assets/images/rec.png" alt="list">
-                    <span>
-                      <strong class="d-block">Platinum $600.00</strong>
-                      Full Payment or Automatic Deduction ($50/month)
-                    </span>
-                  </p>
-
-                  <p class="icon-list">
-                    <img src="assets/images/rec.png" alt="list">
-                    <span>
-                      <strong class="d-block">Gold $360.00</strong>
-                      Full Payment or Automatic Deduction ($30/month)
-                    </span>
-                  </p>
-
-                  <p class="icon-list">
-                    <img src="assets/images/rec.png" alt="list">
-                    <span>
-                      <strong class="d-block">Silver $240.00 </strong>
-                      Full Payment or  Automatic Deduction ($20/month)
-                    </span>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- membership payment method -->
-          <div class="col-md-6">
-            <div class="card card-accordion active">
-              <div class="card-header d-flex justify-content-between">
-                <h5 class="font-600 mb-0">Payment Method</h5>
-
-                <span class="card-accordion-icon">
-                  <img src="assets/images/plus-circle.png" alt="expand" class="plus">
-                  <img src="assets/images/minus-circle.png" alt="expand" class="minus">
-                </span>
-              </div>
-              <div class="card-body">
-
-                <h5 class="card-title font-600">Membership fee may be paid all at one time or in monthly installments. ICGC accepts checks, credit cards, and automatic deductions. Note the following:</h5>
-
-                <div class="icon-list-group pt-3">
-
-                  <p class="icon-list">
-                    <img src="assets/images/rec.png" alt="list">
-                    <span>
-                      If writing a check, make it payable to <strong>Islamic Educational Council</strong>.
-                    </span>
-                  </p>
-
-                  <p class="icon-list">
-                    <img src="assets/images/rec.png" alt="list">
-                    <span>
-                      If using automatic withdrawal, submit a void check to the <strong>ICGC</strong> to authorize payment.
-                    </span>
-                  </p>
-
-                  <p class="icon-list">
-                    <img src="assets/images/rec.png" alt="list">
-                    <span>
-                      <strong class="d-block">Silver $240.00 </strong>
-                      Full Payment or  Automatic Deduction ($20/month)
-                    </span>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- apply now button -->
-        <div class="py-5 btn-apply-wrapper text-center">
-          <div class="row justify-content-center">
-            <div class="col-md-3">
-              <button type="button" class="btn btn-danger btn-apply-js btn-xl w-100 text-uppercase">
-                <span class="me-2">Become a Member</span>
-                <span class="btn-icon btn-icon-right-arrow">
-                <img src="assets/images/next.png" alt="apply">
-              </span>
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
 
-    <div id="step-form-wrapper" class="step-form-wrapper d-none v2 w-75 py-5 m-auto">
+    <div id="step-form-wrapper" class="step-form-wrapper v2 w-75 py-5 m-auto">
       <div class="container">
         <div class="row">
 
@@ -607,7 +448,7 @@
 <script src="assets/js/card_validation.js"></script>
 
 <!-- script.js -->
-<script src="assets/js/script.js ?v=1.0.2"></script>
+<script src="assets/js/script.js?v=1.0.2"></script>
 
 <script>
   function sendOtp(){
