waiver section has been designed

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
     </div>
 
     <div id="step-form-wrapper" class="step-form-wrapper d-none v2 w-75 py-5 m-auto">
+
       <div class="container">
         <div class="row">
 
@@ -286,13 +287,14 @@
             <div class="step-details">
 
               <!-- step 1  -->
-              <div class="step-box active" data-step="1">
+              <div class="step-box" data-step="1">
                 <div class="step-box-wrapper">
                   <div class="step-box-head">
                     <h3 class="font-600 pb-4">Join as a member</h3>
                   </div>
 
                   <div class="step-box-body">
+
                     <div class="alert alert-primary">
                       <h5 class="alert-heading d-flex align-items-center"><img src="assets/images/info.png" alt="info"> Note: </h5>
                       <hr>
@@ -485,7 +487,7 @@
               </div>
 
               <!-- step 5  -->
-              <div class="step-box" data-step="5">
+              <div class="step-box active" data-step="5">
                 <div class="step-box-wrapper">
                   <div class="step-box-head">
                     <h3 class="font-600 pb-4">Payment Information</h3>
@@ -497,7 +499,7 @@
                         <div class="form-group required-group">
                           <label for="card-number">Card Number <span class="text-danger required-mark">*</span></label>
                           <div class="cc-number-holder">
-                            <input type="text" pattern="\d*" maxlength="16" class="form-control validation-cc-number cc-number" id="card-number" name="CardNumber">
+                            <input type="text" maxlength="16" class="form-control validation-cc-number cc-number" id="card-number" name="CardNumber">
                             <div class="cc-card-identity">
                               <img src="https://secure-api.net/Content/event-management-assets/individual-multiple-assets/images/card_mockup.png">
                             </div>
