--- a/membership-form-waivers-v2.html
+++ b/membership-form-waivers-v2.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="node_modules/intl-tel-input/build/css/intlTelInput.min.css">
 
   <!-- main style -->
-  <link rel="stylesheet" href="assets/css/style.css?v=1.0.2">
+  <link rel="stylesheet" href="assets/css/style.css?v=1.0.3">
 </head>
 
 <body>
@@ -69,14 +69,14 @@
           <div class="col-md-4 step-form-sidebar">
             <div class="step-list-sidebar">
 
-              <div class="step-list active" data-step="1">
+              <div class="step-list completed" data-step="1">
                 <span class="step-mark">
                   <img src="assets/images/tick.png" alt="complete">
                 </span>
                 <p class="step-title">Your Email</p>
               </div>
 
-              <div class="step-list" data-step="2">
+              <div class="step-list completed" data-step="2">
                 <span class="step-mark">
                   <img src="assets/images/tick.png" alt="complete">
                 </span>
@@ -87,7 +87,7 @@
                 </div>
               </div>
 
-              <div class="step-list" data-step="3">
+              <div class="step-list completed" data-step="3">
                 <span class="step-mark">
                   <img src="assets/images/tick.png" alt="complete">
                 </span>
@@ -98,7 +98,7 @@
                 </div>
               </div>
 
-              <div class="step-list" data-step="4">
+              <div class="step-list completed" data-step="4">
                 <span class="step-mark">
                   <img src="assets/images/tick.png" alt="complete">
                 </span>
@@ -109,11 +109,22 @@
                 </div>
               </div>
 
-              <div class="step-list last" data-step="5">
+              <div class="step-list completed" data-step="5">
                 <span class="step-mark">
                   <img src="assets/images/tick.png" alt="complete">
                 </span>
                 <p class="step-title">Payment Information</p>
+
+                <div class="edit mt-2">
+                  <button type="button" class="btn btn-secondary btn-sm"><img src="assets/images/edit.png" alt="edit"> Edit</button>
+                </div>
+              </div>
+
+              <div class="step-list active last" data-step="6">
+                <span class="step-mark">
+                  <img src="assets/images/tick.png" alt="complete">
+                </span>
+                <p class="step-title">Waivers</p>
 
                 <div class="edit mt-2">
                   <button type="button" class="btn btn-secondary btn-sm"><img src="assets/images/edit.png" alt="edit"> Edit</button>
@@ -327,7 +338,7 @@
               </div>
 
               <!-- step 5  -->
-              <div class="step-box active" data-step="5">
+              <div class="step-box" data-step="5">
                 <div class="step-box-wrapper">
                   <div class="step-box-head">
                     <h3 class="font-600 pb-4">Payment Information</h3>
@@ -386,14 +397,25 @@
                       </div>
 
                     </div>
+                  </div>
+                </div>
+              </div>
 
-                    <div class="waiver-wrapper pt-4">
+              <!-- step 6 -->
+              <div class="step-box active" data-step="6">
+                <div class="step-box-wrapper">
+                  <div class="step-box-head">
+                    <h3 class="font-600 pb-4">Waivers</h3>
+                  </div>
 
-                      <div class="callout callout-info mb-2">
+                  <div class="step-box-body">
+                    <div class="waiver-wrapper">
+
+                      <div class="callout callout-info mb-3">
                         <p class="text-medium font-600 m-0">Read <a href="#" data-bs-toggle="modal" data-bs-target="#modal-waiver">Code of Conduct</a> </p>
                       </div>
 
-                      <div class="callout callout-info mb-2">
+                      <div class="callout callout-info mb-3">
                         <p class="text-medium font-600 m-0">Read <a href="#" data-bs-toggle="modal" data-bs-target="#modal-terms">Terms & Conditions</a> </p>
                       </div>
 
@@ -582,7 +604,7 @@
 <script src="assets/js/card_validation.js"></script>
 
 <!-- script.js -->
-<script src="assets/js/script.js?v=1.0.2"></script>
+<script src="assets/js/script.js?v=1.0.3"></script>
 
 <script>
   function sendOtp(){
