--- a/membership-form-v4.html
+++ b/membership-form-v4.html
@@ -22,12 +22,12 @@
   <link rel="stylesheet" href="node_modules/intl-tel-input/build/css/intlTelInput.min.css">
 
   <!-- main style -->
-  <link rel="stylesheet" href="assets/css/style.css?v=1.0.2">
+  <link rel="stylesheet" href="assets/css/style.css?v=1.0.3">
 </head>
 
 <body>
 
-<div class="main">
+<div class="main bg-white">
   <!--header -->
   <header class="header">
     <div class="container">
@@ -44,7 +44,7 @@
 
   </header>
 
-  <div class="main-wrapper">
+  <div class="main-wrapper bg-white">
     <div class="content-text">
       <!-- membership brief -->
       <div class="">
@@ -61,12 +61,12 @@
       </div>
     </div>
 
-    <div id="step-form-wrapper" class="step-form-wrapper v2 py-5 m-auto">
+    <div id="step-form-wrapper" class="step-form-wrapper v2 v3 py-5 m-auto">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-10">
             <div class="step-form-main">
-              <div class="row">
+              <div class="row step-form-main-row">
                 <!-- sidebar -->
                 <div class="col-md-4 step-form-sidebar">
                   <div class="step-list-sidebar">
@@ -171,7 +171,7 @@
                     </div>
 
                     <!-- step 2  -->
-                    <div class="step-box" data-step="2">
+                    <div class="step-box active" data-step="2">
                       <div class="step-box-wrapper">
                         <div class="step-box-head">
                           <h3 class="font-600 pb-4">Member Information</h3>
@@ -257,8 +257,6 @@
                             </div>
 
 
-
-
                             <div class="col-12">
                               <p class="font-600 text-medium mb-2 mt-2">Spouse Name</p>
                             </div>
@@ -324,7 +322,7 @@
                     </div>
 
                     <!-- step 4  -->
-                    <div class="step-box active" data-step="4">
+                    <div class="step-box" data-step="4">
                       <div class="step-box-wrapper">
                         <div class="step-box-head">
                           <h3 class="font-600 pb-4">Membership</h3>
@@ -692,7 +690,7 @@
 <script src="assets/js/phone_validator.js"></script>
 
 <!-- script.js -->
-<script src="assets/js/script.js?v=1.0.2"></script>
+<script src="assets/js/script.js?v=1.0.3"></script>
 
 <script>
   function sendOtp(){
