--- a/membership-form-v3.html
+++ b/membership-form-v3.html
@@ -27,7 +27,7 @@
 
 <body>
 
-<div class="main">
+<div class="main bg-white">
   <!--header -->
   <header class="header">
     <div class="container">
@@ -44,7 +44,7 @@
 
   </header>
 
-  <div class="main-wrapper">
+  <div class="main-wrapper bg-white">
     <div class="content-text">
       <!-- membership brief -->
       <div class="">
@@ -61,12 +61,12 @@
       </div>
     </div>
 
-    <div id="step-form-wrapper" class="step-form-wrapper v2 py-5 m-auto">
+    <div id="step-form-wrapper" class="step-form-wrapper v2 v3 py-5 m-auto">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-10">
             <div class="step-form-main">
-              <div class="row">
+              <div class="row step-form-main-row">
                 <!-- sidebar -->
                 <div class="col-md-4 step-form-sidebar">
                   <div class="step-list-sidebar">
